--- a/JobFinderBE/appsettings.json
+++ b/JobFinderBE/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PayRollSystem": "Data Source=SE140965\\SQLEXPRESS;Initial Catalog=PayrollSystem;Integrated Security=True"
     }
-  },
-  "AllowedHosts": "*"
 }
